--- a/experimental/higepon/scheme/test_cpp/Makefile.in
+++ b/experimental/higepon/scheme/test_cpp/Makefile.in
@@ -66,11 +66,9 @@ am_test_cpp_OBJECTS = test_cpp-main.$(OBJEXT) test_cpp-yaml.$(OBJEXT) \
 	test_cpp-Pair.$(OBJEXT) test_cpp-Let.$(OBJEXT) \
 	test_cpp-LetAsterisk.$(OBJEXT) test_cpp-scheme.$(OBJEXT) \
 	test_cpp-load.$(OBJEXT) test_cpp-Application.$(OBJEXT) \
-	test_cpp-Cons.$(OBJEXT) test_cpp-Car.$(OBJEXT) \
-	test_cpp-Cdr.$(OBJEXT) test_cpp-Display.$(OBJEXT) \
-	test_cpp-Set.$(OBJEXT) test_cpp-Eqv.$(OBJEXT) \
-	test_cpp-True.$(OBJEXT) test_cpp-False.$(OBJEXT) \
-	test_cpp-Load.$(OBJEXT)
+	test_cpp-Display.$(OBJEXT) test_cpp-Set.$(OBJEXT) \
+	test_cpp-Eqv.$(OBJEXT) test_cpp-True.$(OBJEXT) \
+	test_cpp-False.$(OBJEXT) test_cpp-Load.$(OBJEXT)
 test_cpp_OBJECTS = $(am_test_cpp_OBJECTS)
 test_cpp_LDADD = $(LDADD)
 DEFAULT_INCLUDES = -I. -I$(srcdir) -I$(top_builddir)
@@ -246,12 +244,6 @@ QuoteFilterTest.cpp\
 ../src/Application.cpp\
 ../src/Application.h\
 ../src/PrimitiveProcedure.h\
-../src/PrimitiveProcedures/Cons.cpp\
-../src/PrimitiveProcedures/Cons.h\
-../src/PrimitiveProcedures/Car.cpp\
-../src/PrimitiveProcedures/Car.h\
-../src/PrimitiveProcedures/Cdr.cpp\
-../src/PrimitiveProcedures/Cdr.h\
 ../src/PrimitiveProcedures/Display.cpp\
 ../src/PrimitiveProcedures/Display.h\
 ../src/PrimitiveProcedures/Set.cpp\
@@ -553,24 +545,6 @@ test_cpp-Application.o: ../src/Application.cpp
 test_cpp-Application.obj: ../src/Application.cpp
 	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-Application.obj `if test -f '../src/Application.cpp'; then $(CYGPATH_W) '../src/Application.cpp'; else $(CYGPATH_W) '$(srcdir)/../src/Application.cpp'; fi`
 
-test_cpp-Cons.o: ../src/PrimitiveProcedures/Cons.cpp
-	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-Cons.o `test -f '../src/PrimitiveProcedures/Cons.cpp' || echo '$(srcdir)/'`../src/PrimitiveProcedures/Cons.cpp
-
-test_cpp-Cons.obj: ../src/PrimitiveProcedures/Cons.cpp
-	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-Cons.obj `if test -f '../src/PrimitiveProcedures/Cons.cpp'; then $(CYGPATH_W) '../src/PrimitiveProcedures/Cons.cpp'; else $(CYGPATH_W) '$(srcdir)/../src/PrimitiveProcedures/Cons.cpp'; fi`
-
-test_cpp-Car.o: ../src/PrimitiveProcedures/Car.cpp
-	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-Car.o `test -f '../src/PrimitiveProcedures/Car.cpp' || echo '$(srcdir)/'`../src/PrimitiveProcedures/Car.cpp
-
-test_cpp-Car.obj: ../src/PrimitiveProcedures/Car.cpp
-	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-Car.obj `if test -f '../src/PrimitiveProcedures/Car.cpp'; then $(CYGPATH_W) '../src/PrimitiveProcedures/Car.cpp'; else $(CYGPATH_W) '$(srcdir)/../src/PrimitiveProcedures/Car.cpp'; fi`
-
-test_cpp-Cdr.o: ../src/PrimitiveProcedures/Cdr.cpp
-	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-Cdr.o `test -f '../src/PrimitiveProcedures/Cdr.cpp' || echo '$(srcdir)/'`../src/PrimitiveProcedures/Cdr.cpp
-
-test_cpp-Cdr.obj: ../src/PrimitiveProcedures/Cdr.cpp
-	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-Cdr.obj `if test -f '../src/PrimitiveProcedures/Cdr.cpp'; then $(CYGPATH_W) '../src/PrimitiveProcedures/Cdr.cpp'; else $(CYGPATH_W) '$(srcdir)/../src/PrimitiveProcedures/Cdr.cpp'; fi`
-
 test_cpp-Display.o: ../src/PrimitiveProcedures/Display.cpp
 	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-Display.o `test -f '../src/PrimitiveProcedures/Display.cpp' || echo '$(srcdir)/'`../src/PrimitiveProcedures/Display.cpp
 
@@ -772,11 +746,6 @@ uninstall-am: uninstall-binPROGRAMS uninstall-info-am
 	mostlyclean-generic pdf pdf-am ps ps-am tags uninstall \
 	uninstall-am uninstall-binPROGRAMS uninstall-info-am
 
-
-#../src/And.cpp\
-#../src/And.h\
-#../src/Or.cpp\
-#../src/Or.h
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
 .NOEXPORT:
