--- a/experimental/higepon/scheme/test_cpp/Makefile.in
+++ b/experimental/higepon/scheme/test_cpp/Makefile.in
@@ -66,10 +66,9 @@ am_test_cpp_OBJECTS = test_cpp-main.$(OBJEXT) test_cpp-yaml.$(OBJEXT) \
 	test_cpp-Cond.$(OBJEXT) test_cpp-Pair.$(OBJEXT) \
 	test_cpp-Let.$(OBJEXT) test_cpp-LetAsterisk.$(OBJEXT) \
 	test_cpp-scheme.$(OBJEXT) test_cpp-load.$(OBJEXT) \
-	test_cpp-Application.$(OBJEXT) test_cpp-Display.$(OBJEXT) \
-	test_cpp-Set.$(OBJEXT) test_cpp-Eqv.$(OBJEXT) \
+	test_cpp-Application.$(OBJEXT) test_cpp-Set.$(OBJEXT) \
 	test_cpp-True.$(OBJEXT) test_cpp-False.$(OBJEXT) \
-	test_cpp-Load.$(OBJEXT) test_cpp-CharcterProcedures.$(OBJEXT) \
+	test_cpp-CharcterProcedures.$(OBJEXT) \
 	test_cpp-VectorProcedures.$(OBJEXT) \
 	test_cpp-NumberProcedures.$(OBJEXT) \
 	test_cpp-StringProcedures.$(OBJEXT) \
@@ -254,18 +253,12 @@ QuoteFilterTest.cpp\
 ../src/Application.cpp\
 ../src/Application.h\
 ../src/PrimitiveProcedure.h\
-../src/PrimitiveProcedures/Display.cpp\
-../src/PrimitiveProcedures/Display.h\
 ../src/PrimitiveProcedures/Set.cpp\
 ../src/PrimitiveProcedures/Set.h\
-../src/PrimitiveProcedures/Eqv.h\
-../src/PrimitiveProcedures/Eqv.cpp\
 ../src/PrimitiveProcedures/True.h\
 ../src/PrimitiveProcedures/True.cpp\
 ../src/PrimitiveProcedures/False.h\
 ../src/PrimitiveProcedures/False.cpp\
-../src/PrimitiveProcedures/Load.h\
-../src/PrimitiveProcedures/Load.cpp\
 ../src/PrimitiveProcedures/CharcterProcedures.cpp\
 ../src/PrimitiveProcedures/VectorProcedures.cpp\
 ../src/PrimitiveProcedures/NumberProcedures.cpp\
@@ -569,23 +562,11 @@ test_cpp-Application.o: ../src/Application.cpp
 test_cpp-Application.obj: ../src/Application.cpp
 	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-Application.obj `if test -f '../src/Application.cpp'; then $(CYGPATH_W) '../src/Application.cpp'; else $(CYGPATH_W) '$(srcdir)/../src/Application.cpp'; fi`
 
-test_cpp-Display.o: ../src/PrimitiveProcedures/Display.cpp
-	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-Display.o `test -f '../src/PrimitiveProcedures/Display.cpp' || echo '$(srcdir)/'`../src/PrimitiveProcedures/Display.cpp
-
-test_cpp-Display.obj: ../src/PrimitiveProcedures/Display.cpp
-	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-Display.obj `if test -f '../src/PrimitiveProcedures/Display.cpp'; then $(CYGPATH_W) '../src/PrimitiveProcedures/Display.cpp'; else $(CYGPATH_W) '$(srcdir)/../src/PrimitiveProcedures/Display.cpp'; fi`
-
 test_cpp-Set.o: ../src/PrimitiveProcedures/Set.cpp
 	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-Set.o `test -f '../src/PrimitiveProcedures/Set.cpp' || echo '$(srcdir)/'`../src/PrimitiveProcedures/Set.cpp
 
 test_cpp-Set.obj: ../src/PrimitiveProcedures/Set.cpp
 	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-Set.obj `if test -f '../src/PrimitiveProcedures/Set.cpp'; then $(CYGPATH_W) '../src/PrimitiveProcedures/Set.cpp'; else $(CYGPATH_W) '$(srcdir)/../src/PrimitiveProcedures/Set.cpp'; fi`
-
-test_cpp-Eqv.o: ../src/PrimitiveProcedures/Eqv.cpp
-	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-Eqv.o `test -f '../src/PrimitiveProcedures/Eqv.cpp' || echo '$(srcdir)/'`../src/PrimitiveProcedures/Eqv.cpp
-
-test_cpp-Eqv.obj: ../src/PrimitiveProcedures/Eqv.cpp
-	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-Eqv.obj `if test -f '../src/PrimitiveProcedures/Eqv.cpp'; then $(CYGPATH_W) '../src/PrimitiveProcedures/Eqv.cpp'; else $(CYGPATH_W) '$(srcdir)/../src/PrimitiveProcedures/Eqv.cpp'; fi`
 
 test_cpp-True.o: ../src/PrimitiveProcedures/True.cpp
 	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-True.o `test -f '../src/PrimitiveProcedures/True.cpp' || echo '$(srcdir)/'`../src/PrimitiveProcedures/True.cpp
@@ -598,12 +579,6 @@ test_cpp-False.o: ../src/PrimitiveProcedures/False.cpp
 
 test_cpp-False.obj: ../src/PrimitiveProcedures/False.cpp
 	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-False.obj `if test -f '../src/PrimitiveProcedures/False.cpp'; then $(CYGPATH_W) '../src/PrimitiveProcedures/False.cpp'; else $(CYGPATH_W) '$(srcdir)/../src/PrimitiveProcedures/False.cpp'; fi`
-
-test_cpp-Load.o: ../src/PrimitiveProcedures/Load.cpp
-	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-Load.o `test -f '../src/PrimitiveProcedures/Load.cpp' || echo '$(srcdir)/'`../src/PrimitiveProcedures/Load.cpp
-
-test_cpp-Load.obj: ../src/PrimitiveProcedures/Load.cpp
-	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-Load.obj `if test -f '../src/PrimitiveProcedures/Load.cpp'; then $(CYGPATH_W) '../src/PrimitiveProcedures/Load.cpp'; else $(CYGPATH_W) '$(srcdir)/../src/PrimitiveProcedures/Load.cpp'; fi`
 
 test_cpp-CharcterProcedures.o: ../src/PrimitiveProcedures/CharcterProcedures.cpp
 	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-CharcterProcedures.o `test -f '../src/PrimitiveProcedures/CharcterProcedures.cpp' || echo '$(srcdir)/'`../src/PrimitiveProcedures/CharcterProcedures.cpp
